--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "scripts": {
-    "start": "node user-services/index.js"
+    "start": "node user-services/api.js",
+    "test": "mocha --full-trace --check-leaks --reporter list --timeout 30000 --recursive tests"
   },
   "dependencies": {
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "mysql": "^2.13.0"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.1.0",
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0"
   }
 }
